<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_checkout"
            android:icon="@mipmap/ic_checkout"
            android:title="Check Out" />

        <item
            android:id="@+id/nav_checkin"
            android:icon="@mipmap/ic_checkin"
            android:title="Check In" />

        <item
            android:id="@+id/nav_bulkPickup"
            android:icon="@mipmap/ic_accept"
            android:title="Bulk Pickup" />

        <item
            android:id="@+id/nav_liaison"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="Liaison" />

        <item
            android:id="@+id/nav_delivery"
            android:icon="@mipmap/ic_delivery"
            android:title="Delivery" />

        <item
            android:id="@+id/nav_pickup"
            android:icon="@mipmap/ic_delivery"
            android:title="Pickup" />
        <item
            android:id="@+id/nav_adjust"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="Adjust" />

        <item
            android:id="@+id/nav_codlist"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="COD List" />

        <item
            android:id="@+id/nav_checkstatus"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Check Status"/>

    </group>

    <item android:title="@string/user">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />


        </menu>
    </item>

</menu>
