<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.delivery.StopPickupFragment"
    android:background="@android:color/white"
    android:id="@+id/stopDeliveryLayout"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        >
        <ProgressBar
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/sendDeliveryProgress"


            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recipientFullNameText"
            android:text="Please Collect"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:padding="8dp"

            />
        <TextView
            android:id="@+id/enterAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_amount_collected"
            style="@style/TextAppearance.MaterialComponents.Headline4"

            android:visibility="gone"
            />
        <EditText
            android:id="@+id/nameCollectedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:hint="@string/enter_recipient_name"
            android:inputType="textCapCharacters"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:id="@+id/recyclerCard"
            style="@style/Widget.MaterialComponents.CardView"
            app:cardBackgroundColor="@color/lighter_grey"
            app:cardCornerRadius="@dimen/preview_card_corner_radius">
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/labelsRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                tools:listitem="@layout/delivery_label_item"
                tools:itemCount="2"
                />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"

            android:id="@+id/signature_pad_container"
            >
            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="8dp"
                android:layout_above="@+id/signature_pad_description" />

            <TextView
                android:id="@+id/signature_pad_description"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:layout_marginBottom="16dp"
                android:layout_alignParentBottom="true"
                android:text="@string/agreement" />

            <com.github.gcacace.signaturepad.views.SignaturePad
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/signature_pad" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttons_container"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Cancel"
                style="@style/button.CancelStyle"
                />
            <Button
                android:id="@+id/clear_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/clear_pad"
                style="@style/button.AccentStyle"
                />

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/save_signature"
                style="@style/button.OkStyle"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>