<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.weightadjust.WeightAdjustFragment"
    android:focusable="true"
    android:clickable="true"
    >

    <RadioGroup
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/weightAdjustType"
        app:layout_constraintTop_toTopOf="parent"
        >
        <RadioButton
            android:id="@+id/weightAdjustTypeWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weight"
            android:checked="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            />
        <RadioButton
            android:id="@+id/weightAdjustTypeDimension"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Dimension"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            />
    </RadioGroup>
    <androidx.cardview.widget.CardView
        android:id="@+id/weightAdjustDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/weightAdjustType"
        app:layout_constraintBottom_toTopOf="@id/weightAdjustLayout"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#dbdbdb"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <EditText
                    android:id="@+id/weightAdjustNOP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:text="1"
                    android:hint="NOP"
                    android:padding="20dp"
                    android:minWidth="100dp"
                    android:inputType="numberSigned"
                    />
                <EditText
                    android:id="@+id/weightAdjustWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:hint="Weight"
                    android:minWidth="100dp"
                    android:padding="20dp"
                    android:inputType="numberDecimal"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <EditText
                    android:id="@+id/weightAdjustLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:hint="Len."
                    android:padding="20dp"
                    android:minWidth="90dp"
                    android:inputType="numberDecimal"
                    android:visibility="gone"
                    />
                <EditText
                    android:id="@+id/weightAdjustWidth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:hint="Wid."
                    android:minWidth="90dp"
                    android:padding="20dp"
                    android:inputType="numberDecimal"
                    android:visibility="gone"
                    />
                <EditText
                    android:id="@+id/weightAdjustHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:hint="Hght."
                    android:minWidth="90dp"
                    android:padding="20dp"
                    android:inputType="numberDecimal"
                    android:visibility="gone"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/weightAdjustFillDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="Fill All Details"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weightAdjustStartScanning"
                android:text="@string/start_scanning"
                style="@style/button.AccentStyle"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/weightAdjustDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:id="@+id/weightAdjustLayout"
        android:layout_height="0dp">

        <ProgressBar
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/weightAdjustProgress"
            android:layout_gravity="center"
            android:visibility="gone" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/scanLabelsImage"
            android:src="@mipmap/scanlabels"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:text="0"
            android:layout_gravity="center"
            android:textColor="@android:color/holo_green_dark"
            android:id="@+id/labelCounter"
            android:visibility="gone" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/weightAdjustScannedItems"
            >

        </androidx.recyclerview.widget.RecyclerView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/weightAdjustDoWeightAdjust"
                style="@style/button.OkStyle"
                android:text="@string/adjust" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/weightAdjustCancelWeightAdjust"
                style="@style/button.CancelStyle"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"

        />

</androidx.constraintlayout.widget.ConstraintLayout>

